# skimdiff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: design.md
src/: diff.rs  gitx.rs  index.rs  lib.rs  main.rs  server.rs  state.rs  watch.rs
tests/: diff_engine.rs  index.rs  review.rs  server.rs  watch.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: app.jsx  hl.js  main.jsx  style.css
