[package]
name = "skimdiff"
version = "0.1.0"
edition = "2024"
description = "Lightweight browser-based review of agent-made code changes: live diffs, review state, tree-sitter find-usages"
license = "MIT"
repository = "https://github.com/techsavd/skimdiff"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
ignore = "0.4.28"
mime_guess = "2.0.5"
notify = "8.2.0"
open = "5.3.6"
rust-embed = "8.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tree-sitter = "0.26.10"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
futures = "0.3.32"
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
